--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "peterkahl/country-to-locale",
+    "type": "library",
     "description": "Converts country code to locale code.",
     "homepage": "https://github.com/peterkahl/Country-to-Locale",
     "license": "Apache License Version 2.0",
