--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "peterkahl/country-to-locale",
     "type": "library",
     "description": "Converts country code to locale code.",
+    "keywords": ["locale", "localization", "language-code"],
     "homepage": "https://github.com/peterkahl/Country-to-Locale",
     "license": "Apache License Version 2.0",
     "authors": [
@@ -17,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "locale\\": "src/locale"
+            "peterkahl\\locale\\": "src/"
         }
     }
 }
